--- a/index.html
+++ b/index.html
@@ -2934,11 +2934,50 @@
     //         }
     //     ]
     // };
+      
+    const data = {
+      "nodes": [
+        {
+          "id": "id1",
+          "name": "name1",
+          "group": "A",
+          "radius": 10,
+          "val": 2,
+        },
+        {
+          "id": "id2",
+          "name": "name2",
+          "val": 5
+        },
+        {
+          "id": "id3",
+          "name": "name3",
+          "val": 10
+        }
+      ],
+      "links": [
+        {
+          "source": "id1",
+          "target": "id2"
+        },
+        {
+          "source": "id3",
+          "target": "id1"
+        }
+      ]
+    }
+    drawChart('.container', data);
+
+
+    // works on vscode extesion  Live Preview by Microsoft
+    // fetch('graph.json').then(res => res.json()).then(data => {
+    //     drawChart('.container', data);
+    // });
 
     // get json from web
-    fetch('https://static.observableusercontent.com/files/e3680d5f766e85edde560c9c31a6dba2ddfcf2f66e1dced4afa18d8040f1f205e0bde1b8b234d866373f2bfc5806fafc47e244c5c9f48b60aaa1917c1b80fcb7?response-content-disposition=attachment%3Bfilename*%3DUTF-8%27%27graph.json').then(res => res.json()).then(data => {
-        drawChart('.container', data);
-    });
+    // fetch('https://static.observableusercontent.com/files/e3680d5f766e85edde560c9c31a6dba2ddfcf2f66e1dced4afa18d8040f1f205e0bde1b8b234d866373f2bfc5806fafc47e244c5c9f48b60aaa1917c1b80fcb7?response-content-disposition=attachment%3Bfilename*%3DUTF-8%27%27graph.json').then(res => res.json()).then(data => {
+    //     drawChart('.container', data);
+    // });
 
 
     </script>
