--- a/index.html
+++ b/index.html
@@ -2966,7 +2966,7 @@
         }
       ]
     }
-    drawChart('.container', data);
+    // drawChart('.container', data);
 
 
     // works on vscode extesion  Live Preview by Microsoft
@@ -2975,9 +2975,9 @@
     // });
 
     // get json from web
-    // fetch('https://static.observableusercontent.com/files/e3680d5f766e85edde560c9c31a6dba2ddfcf2f66e1dced4afa18d8040f1f205e0bde1b8b234d866373f2bfc5806fafc47e244c5c9f48b60aaa1917c1b80fcb7?response-content-disposition=attachment%3Bfilename*%3DUTF-8%27%27graph.json').then(res => res.json()).then(data => {
-    //     drawChart('.container', data);
-    // });
+    fetch('https://static.observableusercontent.com/files/e3680d5f766e85edde560c9c31a6dba2ddfcf2f66e1dced4afa18d8040f1f205e0bde1b8b234d866373f2bfc5806fafc47e244c5c9f48b60aaa1917c1b80fcb7?response-content-disposition=attachment%3Bfilename*%3DUTF-8%27%27graph.json').then(res => res.json()).then(data => {
+        drawChart('.container', data);
+    });
 
 
     </script>
